# complex-numworks

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.rs  build.sh
.cargo/: config
.github/workflows/: build.yml
src/: complex.rs  eadk.rs  editor.rs  function.rs  goto.rs  icon.xcf  main.rs  plot.rs  utils.rs  values.rs
