[package]
name = "epsilon-sample-app"
version = "0.1.0"
authors = ["NumWorks <contact@numworks.com>"]
edition = "2018"

[lib]
name = "app"
path = "src/main.rs"
test = false
doctest = false
bench = false
doc = false
crate-type = ["staticlib"]

[profile.dev]
opt-level = 3
debug = 0
strip = "none"
lto = true

[dependencies]
heapless = "0.7.15"
libm = "0.2.2"
palette = { version = "0.6.1", default-features = false, features = ["libm"] }
